# gglads

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 0001_initial_users.py  0002_integrations.py  0003_shopify_catalog.py  0004_shopify_sales_channels.py  0005_inventory_snapshots.py  0006_keyword_research.py  0007_product_details_expansion.py  0008_seo_verdict.py  0009_keyword_targets_and_chat.py  0010_image_composite_pk.py  0011_sync_kind.py  0012_chat_global_scope.py  0013_campaigns.py  0014_research_source_errors.py  0015_ad_groups_restructure.py  0016_user_preferences.py  0017_ad_copy_versioning_and_gads_push.py  0018_shopify_daily_sales.py  0019_collection_seo_fields.py  0020_oos_tracking.py  0021_collection_suggestions_and_kw_history.py  0022_product_is_ignored.py  0023_entity_tasks.py  0024_product_assignment.py  0025_user_invites.py  0026_helena_module.py  0027_post_channel.py  0028_brand_asset_product_id_bigint.py  0029_helena_feature_gaps.py  0030_memory_and_product_library.py  0031_message_image.py  0032_ad_stock_guard.py  0033_giveaways.py  0034_banners.py
gglads/: config.py
gglads/cron/: ad_copy_maintenance.py  ad_stock_guard.py  collection_suggestions_sweep.py  giveaway_sync.py  helena_worker.py  keyword_history_sweep.py  shopify_stock_refresh.py  shopify_sync.py  shopify_sync_sales.py
gglads/db/: session.py
gglads/models/: __init__.py  brand.py  campaign.py  email_campaign.py  entity_task.py  helena.py  integration.py  product_chat.py  product_keywords.py  user.py  (+1 more)
tests/: test_helena.py
(+129 files in other folders)
